# learn_a2a

./: .gitignore  README.md  main.py  pyproject.toml
image_description/: README.md  image_descriptor.py  llm_chat.py  speech2text.py  test_client.py  user.py
net_simulator/: README.md  outline.md  utils.py
net_simulator/chat-ui/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
net_simulator/config/: config_example.json
net_simulator/datamodels/: __init__.py  events.py  network.py
net_simulator/executors/: __init__.py  essay_writer_executor.py  executor_base.py  hospital_executors.py  medical_executors.py  mock_executor.py  music_expert_executor.py  scholar_executors.py  search_summary_executor.py  transcriptior_executor.py
net_simulator/mcp/: agent_service.py  drug_inventory.py  langsearch.py  medical_record.py
net_simulator/msgs/: __init__.py  agent_msgs.py  core_msgs.py  graph_msgs.py  task_msgs.py  user_msgs.py
net_simulator/nodes/: public_agent.py  system_server.py
net_simulator/playground/: mcp_client.py  mcp_llm.py  mcp_server.py  multiturn.py  multiturn_stram.py  test.py  test_client.py  test_langsearch.py
net_simulator/procfile/: hostpital_sim.procfile  launch_all.procfile  network_base.procfile  system_base.procfile  test_simple_agent.procfile  test_user_server.procfile
net_simulator/test/: test_client.py  test_gemini.py  test_manager.py  test_mcp.py  test_media.py  (+4 more)
search_summary/: README.md  bing_searcher.py  llm_chat.py  main.py  orchestrator.py  searcher.py  summarizer.py  test_client.py  test_multiclient.py
(+58 files in other folders)
