[project]
name = "learn-a2a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.2.8",
    "openai",
    "requests",
    "beautifulsoup4",
    "lxml",
    "uvicorn",
    "dotenv",
    "google-genai[aiohttp]",
    "fastapi[all]",
    "fastmcp",
    "honcho",
    "baostock>=0.8.9",
    "rich>=14.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
